2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c: Expired, revoked or disabled
    keys shouldn't be on the 'trusted' page. See #353494
    
2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libcryptui/cryptui-keyset.c:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * libseahorse/seahorse-tool.c:
    * tests/dbus-test.py: Fix problem with libcryptui based programs
    getting the wrong keyid and encryption failing. 
    
2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-prefs.c:
    * seahorse-prefs.glade: Simplify encryption preferences.
    
2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/Makefile.am:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.ui:
    * src/seahorse-preferences.c:
    * src/seahorse-preferences.glade (removed, hasn't been used):
    * src/seahorse-preferences.h: Move 'view column' options into 
    the 'View' menu. Remove a tab from preferences.
    
2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c: Close passphrase prompt on 
    <ESC> key press. Fixes #354332
    
2006-09-07  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Add descriptive labels and 
    make the GUI of key properties dialogs simpler. Fixes #353845
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-source.c: Create .ssh directory
    if it doesn't exist. Fixes #354251
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>
