@@ -12,7 +12,8 @@ INCLUDES = -I$(top_builddir) \
 	-DDATA_DIR=\""$(datadir)"\" \
 	-DSEAHORSE_GLADEDIR=\""$(gladedir)"\" \
 	-DLOCALEDIR=\""$(localedir)"\" \
-	-DPIXMAPSDIR=\""$(pixmapsdir)"\"
+	-DPIXMAPSDIR=\""$(pixmapsdir)"\" \
+	-DLIBCRYPTUI_API_SUBJECT_TO_CHANGE
 
 bin_PROGRAMS = seahorse-daemon
 
