@@ -11,7 +11,8 @@ INCLUDES = -I$(top_builddir) \
 	-DDATA_DIR=\""$(datadir)"\" \
 	-DSEAHORSE_GLADEDIR=\""$(gladedir)"\" \
 	-DLOCALEDIR=\"$(localedir)\" \
-	-DPIXMAPSDIR=\""$(pixmapsdir)"\"
+	-DPIXMAPSDIR=\""$(pixmapsdir)"\" \
+	-DLIBCRYPTUI_API_SUBJECT_TO_CHANGE
 
 if WITH_KEYSERVER
 KEYSERVER_SRCS = seahorse-keyserver-search.c seahorse-keyserver-results.c seahorse-keyserver-sync.c seahorse-keyserver-sync.h
