@@ -1,5 +1,17 @@
 2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * agent/Makefile.am:
+    * daemon/Makefile.am:
+    * libcryptui/Makefile.am:
+    * libcryptui/cryptui.h:
+    * libseahorse/Makefile.am:
+    * plugins/applet/Makefile.am:
+    * plugins/nautilus/Makefile.am:
+    * src/Makefile.am: Require define to acknowledge instability
+    of libcryptui API.
+    
+2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-pgp-key.c: Expired, revoked or disabled
     keys shouldn't be on the 'trusted' page. See #353494
     
